--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: gamble
-description: A new Flutter project.
+description: Gambling games.
 version: 1.0.0+1
 environment: 
   sdk: '>=2.12.0 <3.0.0'
@@ -20,6 +20,7 @@ dependencies:
   flutter_slot_machine: ^0.0.1
   roulette: ^0.1.5
   flutter_fortune_wheel: ^1.3.0
+  flutter_native_splash: ^2.3.7
 
 dev_dependencies:
   flutter_test: 
