--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   roulette: ^0.1.5
   flutter_fortune_wheel: ^1.3.0
   flutter_native_splash: ^2.3.7
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test: 
